Fixed use of deprecated URL constructor
Signed-off-by: antublue <antublue@antublue.org>